# study-engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  boot.mjs  boot.sh  package-lock.json  package.json  railway.toml
.github/workflows/: ci.yml
.openai/: hosting.json
questions/: cca-f.json
scripts/: package-sites.mjs
study-engine-cli/: Cargo.toml
study-engine-cli/src/: ansi.rs  db.rs  main.rs  paths.rs  progress.rs  questions.rs  serve.rs  session.rs  stats.rs  study_plan.rs
study-engine-cli/tests/: launch_dir.rs
study-engine-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.typecheck.json  vite.config.mjs  vitest.config.mjs
study-engine-ui/e2e/: group-flow.spec.ts  settings-flow.spec.ts  study-flow.spec.ts
study-engine-ui/e2e/fixtures/: e2e-demo.json
study-engine-ui/src/: App.svelte  main.ts  style.css
study-engine-ui/src/lib/: AccessGate.svelte  Browse.svelte  Dashboard.svelte  GroupHost.svelte  GroupStudent.svelte  History.svelte  Settings.svelte  StudySession.svelte  api.test.ts  api.ts  browseSelectors.ts  certSelection.test.ts  certSelection.ts  dashboardHelp.test.ts  dashboardHelp.ts  presentation.test.ts  presentation.ts  schemas.ts  selectors.test.ts  sessionSelectors.ts  settings.test.ts  studySessionState.test.ts  studySessionState.ts  theme.test.ts  theme.ts  types.ts
study-engine-ui/src/test/: setup.ts
study-engine-ui/worker/: index.js
